# R32

./: CMakeLists.txt  app_win32.rc  recordQuestions  res.qrc
src/: main.cpp
src/dbopt/: r32recordvalue.cpp  r32recordvalue.h
src/dbutil/: connectionpool.cpp  connectionpool.h
src/dbutil/res/: config.json  consistencylog.sql
src/res/: detectvalue.sql  r32.qss
src/serialport/: constant.h  handledata.cpp  handledata.h  handlemcudata.cpp  handlemcudata.h  handler32data.cpp  handler32data.h  mcuconstant.h  r32constant.h  serialportcom.cpp  serialportcom.h
src/widget/: alarmwidget.cpp  alarmwidget.h  delayedbutton.cpp  delayedbutton.h  fanwidget.cpp  fanwidget.h  historydatawidget.cpp  historydatawidget.h  labelbutton.cpp  mainwidget.cpp  mainwidget.h  mcuctrlstatuswidget.cpp  mcuctrlstatuswidget.h  mcuoperatewidget.cpp  mcuoperatewidget.h  operatebasewidget.cpp  operatebasewidget.h  operater32widget.cpp  operater32widget.h  operatewidget.cpp  operatewidget.h  querywidget.cpp  querywidget.h  recvr32datawidget.cpp  recvr32datawidget.h  sendcmdwidget.cpp  sendcmdwidget.h  serialportsettingswidget.cpp  serialportsettingswidget.h  statuswidget.h  stepswidget.cpp  stepswidget.h  stepwidget.cpp  stepwidget.h  tabwidget.cpp  tabwidget.h  valvewidget.cpp  valvewidget.h
